--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "date.js": "^0.3.1",
     "human-interval": "^0.1.6",
     "kue": "^0.11.5",
-    "kue-unique": "^1.0.1",
+    "kue-unique": "adin234/kue-unique#e6f045b092",
     "lodash": "^4.17.2",
     "redlock": "^2.1.0",
     "uuid": "^3.0.0"
